# Image-Processing-CPlus

./: CMakeLists.txt  imgProcessing.cpp  imgProcessing.h  main.cpp  stroke_transformer.cpp  stroke_transformer.h
